Added draftmode, refactor ucfgfx, and autoref fix
You can now use `make draft` in order ot quickly build a draft version
that doesnt include any graphics. Hyperref will still work in non draft
mode, which is desired because we want to be able to jump around in the
document.

The \ucfgfx macro got changed to have an optional argument for changing
the \includegraphics sizing argument. Also a generic \ucffig was created
for later generic figure usage.

--- a/desc.tex
+++ b/desc.tex
@@ -52,7 +52,7 @@ monitoring sensors. The control modules will be as similar as possible with a
 designated area that allows for assigning specific roles to the control
 modules.
 
-\ucfgfx{fig:whcs-overview}{a21expected2pages-img001.png}{WHCS System Overview}
+\ucfgfx[scale=0.65]{fig:whcs-overview}{a21expected2pages-img001.png}{WHCS System Overview}
 
 % Section 2.2
 \subsection{Objectives}
@@ -141,7 +141,7 @@ sensors, which would relay their data back to the base station. This is
 illustrated in \autoref{fig:many-to-one}. The base station would support
 queries from the LCD interface and simultaneously from a connected phone.
 
-\ucfgfx{fig:many-to-one}{many-to-one}{A illustration showing the translation of many different sensor nodes to WHCS' protocol}
+\ucfgfx[scale=0.5]{fig:many-to-one}{many-to-one}{A illustration showing the translation of many different sensor nodes to WHCS' protocol}
 
 Beyond home sensors, all of the other controllable objects in the WHCS
 would have metadata being collected about them at all times. This extra metadata
