--- a/whcs.tex
+++ b/whcs.tex
@@ -5,7 +5,11 @@
 %   For authors, see the title page
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[letterpaper,11pt]{article}
+\ifdefined\enabledraft
+  \documentclass[draft,letterpaper,11pt]{article}
+\else
+  \documentclass[letterpaper,11pt]{article}
+\fi
 \usepackage[margin=1in, lmargin=1.5in]{geometry}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -32,7 +36,12 @@
 % For pretty code listings
 \usepackage{listings}
 % Document jumping and linkage
-\usepackage{hyperref} % for URL linking
+% NEVER use draft mode for hyperref
+\ifdefined\enabledraft
+  \usepackage[draft=false]{hyperref}
+\else
+  \usepackage{hyperref}
+\fi
 
 % Probably not needed for now
 %\usepackage{setspace}
@@ -80,19 +89,21 @@ pdfauthor={Grant Hernandez},
 \renewcommand\subsectionautorefname{Section}
 
 % Custom figure macro for quick and easy changes across the document
-%   \ucfgfx
+%   \ucffig
 %     Param 1: label
-%     Param 2: graphics path
+%     Param 2: figure content
 %     Param 3: caption
-% TODO: provide optional includegraphics dimensions as #4
-\newcommand{\ucfgfx}[3]{
+\newcommand{\ucffig}[3]{
 \begin{figure}
 \centering
-\includegraphics[width=0.8\linewidth]{#2}
-
+#2
 \caption{#3}
 \label{#1}
 \end{figure}
+}
+
+\newcommand{\ucfgfx}[4][scale=1.0]{
+  \ucffig{#2}{\includegraphics[#1]{#3}}{#4}
 }
 
 % Section Heading Customization
