--- a/whcs.tex
+++ b/whcs.tex
@@ -33,8 +33,14 @@
 \usetikzlibrary{shapes.misc}
 % Filler text
 \usepackage{lipsum}
+% Wrapping text around figures
+\usepackage{wrapfig}
 % For pretty code listings
 \usepackage{listings}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Hyperref should be last
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Document jumping and linkage
 % NEVER use draft mode for hyperref
 \ifdefined\enabledraft
